// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should disable azure monitor secret input 1`] = `
<Fragment>
  <div
    className="gf-form-group"
  >
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
          tooltip="Choose an Azure Cloud."
        >
          Azure Cloud
        </Component>
        <Select
          allowCustomValue={false}
          autoFocus={false}
          backspaceRemovesValue={true}
          className="width-15"
          components={
            Object {
              "Group": [Function],
              "IndicatorsContainer": [Function],
              "MenuList": [Function],
              "Option": [Function],
              "SingleValue": [Function],
            }
          }
          defaultValue="azuremonitor"
          isClearable={false}
          isDisabled={false}
          isLoading={false}
          isMulti={false}
          isSearchable={true}
          maxMenuHeight={300}
          onChange={[MockFunction]}
          openMenuOnFocus={false}
          options={
            Array [
              Object {
                "label": "Azure",
                "value": "azuremonitor",
              },
              Object {
                "label": "Azure US Government",
                "value": "govazuremonitor",
              },
              Object {
                "label": "Azure Germany",
                "value": "germanyazuremonitor",
              },
              Object {
                "label": "Azure China",
                "value": "chinaazuremonitor",
              },
            ]
          }
          tabSelectsValue={true}
          value={
            Object {
              "label": "Azure",
              "value": "azuremonitor",
            }
          }
        />
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Directory (tenant) ID
        </Component>
        <div
          className="width-15"
        >
          <Input
            className="width-30"
            onChange={[MockFunction]}
            placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
            value="e7f3f661-a933-3h3f-0294-31c4f962ec48"
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Application (client) ID
        </Component>
        <div
          className="width-15"
        >
          <Input
            className="width-30"
            onChange={[MockFunction]}
            placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
            value="34509fad-c0r9-45df-9e25-f1ee34af6900"
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Client Secret
        </Component>
        <Input
          className="width-25"
          disabled={true}
          placeholder="configured"
        />
      </div>
      <div
        className="gf-form"
      >
        <div
          className="max-width-30 gf-form-inline"
        >
          <Button
            onClick={[MockFunction]}
            type="button"
            variant="secondary"
          >
            reset
          </Button>
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Default Subscription
        </Component>
        <div
          className="width-25"
        >
          <Select
            allowCustomValue={false}
            autoFocus={false}
            backspaceRemovesValue={true}
            className=""
            components={
              Object {
                "Group": [Function],
                "IndicatorsContainer": [Function],
                "MenuList": [Function],
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            defaultValue="44987801-6nn6-49he-9b2d-9106972f9789"
            isClearable={false}
            isDisabled={false}
            isLoading={false}
            isMulti={false}
            isSearchable={true}
            maxMenuHeight={300}
            onChange={[MockFunction]}
            openMenuOnFocus={false}
            options={Array []}
            tabSelectsValue={true}
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <div
          className="max-width-30 gf-form-inline"
        >
          <Button
            disabled={false}
            onClick={[MockFunction]}
            size="sm"
            type="button"
            variant="secondary"
          >
            Load Subscriptions
          </Button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Render should enable azure monitor load subscriptions button 1`] = `
<Fragment>
  <div
    className="gf-form-group"
  >
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
          tooltip="Choose an Azure Cloud."
        >
          Azure Cloud
        </Component>
        <Select
          allowCustomValue={false}
          autoFocus={false}
          backspaceRemovesValue={true}
          className="width-15"
          components={
            Object {
              "Group": [Function],
              "IndicatorsContainer": [Function],
              "MenuList": [Function],
              "Option": [Function],
              "SingleValue": [Function],
            }
          }
          defaultValue="azuremonitor"
          isClearable={false}
          isDisabled={false}
          isLoading={false}
          isMulti={false}
          isSearchable={true}
          maxMenuHeight={300}
          onChange={[MockFunction]}
          openMenuOnFocus={false}
          options={
            Array [
              Object {
                "label": "Azure",
                "value": "azuremonitor",
              },
              Object {
                "label": "Azure US Government",
                "value": "govazuremonitor",
              },
              Object {
                "label": "Azure Germany",
                "value": "germanyazuremonitor",
              },
              Object {
                "label": "Azure China",
                "value": "chinaazuremonitor",
              },
            ]
          }
          tabSelectsValue={true}
          value={
            Object {
              "label": "Azure",
              "value": "azuremonitor",
            }
          }
        />
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Directory (tenant) ID
        </Component>
        <div
          className="width-15"
        >
          <Input
            className="width-30"
            onChange={[MockFunction]}
            placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
            value="e7f3f661-a933-3h3f-0294-31c4f962ec48"
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Application (client) ID
        </Component>
        <div
          className="width-15"
        >
          <Input
            className="width-30"
            onChange={[MockFunction]}
            placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
            value="34509fad-c0r9-45df-9e25-f1ee34af6900"
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Client Secret
        </Component>
        <div
          className="width-15"
        >
          <Input
            className="width-30"
            onChange={[MockFunction]}
            placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
            value="e7f3f661-a933-4b3f-8176-51c4f982ec48"
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Default Subscription
        </Component>
        <div
          className="width-25"
        >
          <Select
            allowCustomValue={false}
            autoFocus={false}
            backspaceRemovesValue={true}
            className=""
            components={
              Object {
                "Group": [Function],
                "IndicatorsContainer": [Function],
                "MenuList": [Function],
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            defaultValue="44987801-6nn6-49he-9b2d-9106972f9789"
            isClearable={false}
            isDisabled={false}
            isLoading={false}
            isMulti={false}
            isSearchable={true}
            maxMenuHeight={300}
            onChange={[MockFunction]}
            openMenuOnFocus={false}
            options={Array []}
            tabSelectsValue={true}
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <div
          className="max-width-30 gf-form-inline"
        >
          <Button
            disabled={false}
            onClick={[MockFunction]}
            size="sm"
            type="button"
            variant="secondary"
          >
            Load Subscriptions
          </Button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Render should render component 1`] = `
<Fragment>
  <div
    className="gf-form-group"
  >
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
          tooltip="Choose an Azure Cloud."
        >
          Azure Cloud
        </Component>
        <Select
          allowCustomValue={false}
          autoFocus={false}
          backspaceRemovesValue={true}
          className="width-15"
          components={
            Object {
              "Group": [Function],
              "IndicatorsContainer": [Function],
              "MenuList": [Function],
              "Option": [Function],
              "SingleValue": [Function],
            }
          }
          defaultValue="azuremonitor"
          isClearable={false}
          isDisabled={false}
          isLoading={false}
          isMulti={false}
          isSearchable={true}
          maxMenuHeight={300}
          onChange={[MockFunction]}
          openMenuOnFocus={false}
          options={
            Array [
              Object {
                "label": "Azure",
                "value": "azuremonitor",
              },
              Object {
                "label": "Azure US Government",
                "value": "govazuremonitor",
              },
              Object {
                "label": "Azure Germany",
                "value": "germanyazuremonitor",
              },
              Object {
                "label": "Azure China",
                "value": "chinaazuremonitor",
              },
            ]
          }
          tabSelectsValue={true}
          value={
            Object {
              "label": "Azure",
              "value": "azuremonitor",
            }
          }
        />
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Directory (tenant) ID
        </Component>
        <div
          className="width-15"
        >
          <Input
            className="width-30"
            onChange={[MockFunction]}
            placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
            value="e7f3f661-a933-3h3f-0294-31c4f962ec48"
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Application (client) ID
        </Component>
        <div
          className="width-15"
        >
          <Input
            className="width-30"
            onChange={[MockFunction]}
            placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
            value="34509fad-c0r9-45df-9e25-f1ee34af6900"
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Client Secret
        </Component>
        <div
          className="width-15"
        >
          <Input
            className="width-30"
            onChange={[MockFunction]}
            placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <Component
          className="width-12"
        >
          Default Subscription
        </Component>
        <div
          className="width-25"
        >
          <Select
            allowCustomValue={false}
            autoFocus={false}
            backspaceRemovesValue={true}
            className=""
            components={
              Object {
                "Group": [Function],
                "IndicatorsContainer": [Function],
                "MenuList": [Function],
                "Option": [Function],
                "SingleValue": [Function],
              }
            }
            defaultValue="44987801-6nn6-49he-9b2d-9106972f9789"
            isClearable={false}
            isDisabled={false}
            isLoading={false}
            isMulti={false}
            isSearchable={true}
            maxMenuHeight={300}
            onChange={[MockFunction]}
            openMenuOnFocus={false}
            options={Array []}
            tabSelectsValue={true}
          />
        </div>
      </div>
    </div>
    <div
      className="gf-form-inline"
    >
      <div
        className="gf-form"
      >
        <div
          className="max-width-30 gf-form-inline"
        >
          <Button
            disabled={true}
            onClick={[MockFunction]}
            size="sm"
            type="button"
            variant="secondary"
          >
            Load Subscriptions
          </Button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
